fixed layout problem

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4443,26 +4443,22 @@ body {
 .cid-rE61137NZl .user_text {
   color: #232323;
 }
-.cid-rE9t4dOYkI {
-  padding-top: 60px;
-  padding-bottom: 15px;
+.cid-rE9HCdLWBz {
+  padding-top: 90px;
+  padding-bottom: 0px;
   background: linear-gradient(45deg, #55b4d4, #073b4c);
 }
-.cid-rE9t4dOYkI .mbr-text,
-.cid-rE9t4dOYkI .mbr-section-btn {
+.cid-rE9HCdLWBz .mbr-text,
+.cid-rE9HCdLWBz .mbr-section-btn {
   text-align: left;
 }
-.cid-rCKRa5Qk8U {
-  padding-top: 90px;
+.cid-rE9HtGa965 {
+  padding-top: 30px;
   padding-bottom: 90px;
   background: linear-gradient(45deg, #e4d295, #0f7699);
 }
-.cid-rCKRa5Qk8U .mbr-text,
-.cid-rCKRa5Qk8U .mbr-section-btn {
-  text-align: left;
-}
-.cid-rCKRa5Qk8U .mbr-text,
-.cid-rCKRa5Qk8U .mbr-section-btn P {
+.cid-rE9HtGa965 .mbr-text,
+.cid-rE9HtGa965 .mbr-section-btn {
   text-align: left;
 }
 .cid-rAiGTO2SGe {
